--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="..css/style.css">
-    <title>Maquetacion-bootstrap</title>
+    <title>Aplicacion-bootstrap</title>
 </head>
 
 <header>
@@ -53,11 +53,12 @@
 
 <body>
 
-    
-
-
-
-
+    <main>
+        <p class="lead">
+            Veni a visitarnos y escuchar tus artistas favoritos. Nos encontramos en Mar del Plata Buenos aires. 
+            Moreno 1123. Te esperamos.
+        </p>
+    </main>
 
 
 
